--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <h3>* Big File Size Info : 
 <h3> - Part 1 : 6,12 GB
 <h3>* NOTE : For HEN, enable hen before to play game.</h2>
+<h3>* Game inside MMCM or Multiman, WebMan alternative.</h2>
 <br>
 <h3>- Google Drive : <a href="https://bit.ly/3zSOXR8" target="_blank" rel="noopener">https://bit.ly/3zSOXR8</a></p>
 <h3>- Mediafire : <a href="https://bit.ly/3T79dFb" target="_blank" rel="noopener">https://bit.ly/3T79dFb</a></p>
